# zlambda

./: .gitignore  Cargo.toml  LICENSE  README.md  deadline.json  process.json  schedule.json
zlambda-cli/: Cargo.toml
zlambda-cli/src/: main.rs
zlambda-common/: Cargo.toml
zlambda-common/src/: action.rs  algorithm.rs  channel.rs  clap.rs  dispatch.rs  error.rs  lib.rs  library.rs  log.rs  message.rs  module.rs  operation.rs  packet.rs
zlambda-common/src/message/: candidate_to_candidate.rs  client_to_node.rs  error.rs  follower_to_guest.rs  follower_to_leader.rs  guest_to_leader.rs  guest_to_node.rs  leader_to_follower.rs  leader_to_guest.rs  mod.rs  node_to_client.rs  reader.rs  writer.rs
zlambda-common/src/module/: command.rs  dispatch.rs  error.rs  event.rs  handler.rs  id.rs  manager.rs  mod.rs  specification.rs  symbol.rs  v1.rs  version.rs
zlambda-core/: Cargo.toml
zlambda-core/src/: channel.rs  lib.rs
zlambda-core/src/client/: error.rs  handle.rs  mod.rs  task.rs
zlambda-core/src/client/message/: input.rs  message.rs  mod.rs  output.rs
zlambda-core/src/client/module/: input.rs  module.rs  output.rs
zlambda-core/src/cluster/: message.rs
zlambda-core/src/common/: deserialize.rs  experimental.rs  mod.rs  serialize.rs  tagged.rs
zlambda-core/src/common/message/: asynchronous.rs  buffer.rs  mod.rs  queue.rs  socket.rs  synchronizable.rs  synchronized.rs  synchronous.rs
zlambda-core/src/common/module/: error.rs  id.rs  manager.rs  mod.rs  module.rs
zlambda-core/src/common/notification/: id.rs  mod.rs
zlambda-core/src/general/: input.rs  message.rs  mod.rs
zlambda-core/src/log/: mod.rs  term.rs
zlambda-core/src/message/: buffer.rs  channel.rs  do_receive.rs  do_send.rs  envelope.rs  error.rs  follower_to_guest.rs  leader_to_guest.rs  mod.rs  node_to_client.rs  queue.rs  reader.rs  socket.rs  synchronous.rs
zlambda-core/src/module/: error.rs  id.rs  input.rs  manager.rs  mod.rs  module.rs  output.rs
zlambda-core/src/node/: error.rs  message.rs  mod.rs  reference.rs  task.rs
zlambda-core/src/node/client/: mod.rs  task.rs
zlambda-core/src/node/connection/: action.rs  mod.rs  task.rs
zlambda-core/src/node/error/: mod.rs
zlambda-core/src/node/input/: mod.rs
zlambda-core/src/node/member/: action.rs  message.rs  mod.rs  reference.rs  task.rs
zlambda-core/src/node/message/: external.rs  internal.rs  mod.rs
zlambda-core/src/node/output/: mod.rs
zlambda-core/src/node/sibling/: action.rs  task.rs
zlambda-core/src/server/: handle.rs  id.rs  mod.rs  task.rs  type.rs
zlambda-core/src/server/client/: id.rs  mod.rs  task.rs
zlambda-core/src/server/client/message/: input.rs  message.rs  mod.rs  output.rs
zlambda-core/src/server/connection/: task.rs
zlambda-core/src/server/error/: mod.rs
zlambda-core/src/server/input/: mod.rs
zlambda-core/src/server/log/: data.rs  entry.rs  error.rs  following.rs  id.rs  issuer.rs  leading.rs  manager.rs  mod.rs  term.rs
zlambda-core/src/server/member/: input.rs  message.rs  mod.rs  task.rs
zlambda-core/src/server/message/: input.rs  message.rs  mod.rs  output.rs
zlambda-core/src/server/module/: input.rs  mod.rs  module.rs  output.rs
zlambda-core/src/server/node/: mod.rs  task.rs
zlambda-core/src/server/node/message/: input.rs  message.rs  output.rs
zlambda-core/src/server/output/: mod.rs
zlambda-ebpf-loader/: Cargo.toml
zlambda-ebpf-loader/src/: lib.rs
zlambda-ebpf-matrix/: Cargo.toml
zlambda-ebpf-matrix/src/: main.rs  sep.rs  shared.rs
zlambda-matrix-ebpf-module/: Cargo.toml
zlambda-matrix-ebpf-module/src/: lib.rs
zlambda-matrix-native/: Cargo.toml
zlambda-matrix-native/src/: lib.rs
zlambda-process/: Cargo.toml
zlambda-process/src/: lib.rs
zlambda-realtime-task/: Cargo.toml
zlambda-realtime-task/src/: id.rs  instance.rs  lib.rs  log_entry_data.rs  manager.rs  notification_header.rs  scheduling_task.rs  shared.rs  state.rs
zlambda-realtime-task/src/message/: input.rs
zlambda-server/: Cargo.toml
zlambda-server/src/: algorithm.rs  common.rs  lib.rs  main.rs  read.rs  read_write.rs  run.rs  runtime.rs  stdin.rs  tcp.rs  udp.rs  unix.rs
zlambda-server/src/application/: actor.rs  message.rs
zlambda-server/src/candidate/: mod.rs
zlambda-server/src/cluster/: actor.rs  client.rs  common.rs  connection.rs  log.rs  message.rs  mod.rs  node.rs  packet.rs  packet_reader.rs  state.rs  term.rs
zlambda-server/src/cluster/actor/: follower.rs  leader.rs  mod.rs  node.rs  packet_reader.rs
zlambda-server/src/cluster/consensus/: actor.rs  common.rs  message.rs  mod.rs
zlambda-server/src/cluster/leader/: connection.rs  mod.rs
zlambda-server/src/cluster/manager/: follower.rs  leader.rs  mod.rs
zlambda-server/src/cluster/node/: actor.rs  candidate.rs  message.rs  mod.rs
zlambda-server/src/cluster/node/candidate/: mod.rs
zlambda-server/src/cluster/node/follower/: actor.rs  message.rs  mod.rs  registered.rs  registering.rs  (+1 more)
zlambda-server/src/cluster/state/: actor.rs  data.rs  message.rs  mod.rs  transition.rs
zlambda-server/src/follower/: client.rs  connection.rs  log.rs  mod.rs
zlambda-server/src/follower/client/: builder.rs  mod.rs  result.rs  task.rs
zlambda-server/src/follower/connection/: builder.rs  result.rs  task.rs
zlambda-server/src/follower/follower/: builder.rs  mod.rs  task.rs
zlambda-server/src/leader/: client.rs  connection.rs  follower.rs  log.rs  mod.rs  reference.rs
zlambda-server/src/leader/client/: builder.rs  result.rs  task.rs
zlambda-server/src/leader/connection/: builder.rs  mod.rs  result.rs  task.rs
zlambda-server/src/leader/follower/: builder.rs  handle.rs  message.rs  mod.rs  result.rs  task.rs
zlambda-server/src/log/: following.rs  leading.rs  mod.rs
zlambda-server/src/node/: message.rs  mod.rs
zlambda-server/src/node/follower/: mod.rs
zlambda-server/src/node/leader/: client.rs  connection.rs  follower.rs  mod.rs
zlambda-server/src/operation/: actor.rs  message.rs
zlambda-server/src/packet/: actor.rs  message.rs
zlambda-server/src/state/: mod.rs
zlambda-wasm/: Cargo.toml
zlambda-wasm/src/: lib.rs
(+127 files in other folders)
