[workspace]
members = [
    "zlambda-cli",
    "zlambda-core",
    "zlambda-dynamic",
    "zlambda-process",
    "zlambda-router",
    "zlambda-realtime-task",
    "zlambda-wasm",
    "zlambda-wasm-matrix",
    "zlambda-matrix-native",
]

exclude = [
    "zlambda-ebpf-matrix",
    "zlambda-ebpf",
    "zlambda-ebpf-loader",
]
