[workspace]
members = [
    "zlambda-cli",
    "zlambda-core",
    "zlambda-dynamic",
    "zlambda-matrix",
    "zlambda-matrix-native",
    "zlambda-matrix-process",
    "zlambda-process",
    "zlambda-realtime-task",
    "zlambda-router",
    "zlambda-wasm",
    "zlambda-wasm-matrix",
]

exclude = [
    "zlambda-ebpf",
    "zlambda-ebpf-loader",
    "zlambda-ebpf-matrix",
]
