[workspace]
members = [
    "zlambda-cli",
    "zlambda-core",
    "zlambda-dynamic",
    "zlambda-matrix",
    "zlambda-matrix-ebpf",
    "zlambda-matrix-ebpf-module",
    "zlambda-matrix-native",
    "zlambda-matrix-process",
    "zlambda-matrix-wasm-module",
    "zlambda-matrix-wasm-payload",
    "zlambda-process",
    "zlambda-realtime-task",
    "zlambda-realtime-task2",
    "zlambda-router",
    "zlambda-sleep",
]

exclude = [
    "zlambda-matrix-ebpf-payload",
]
