[package]
name = "zlambda-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "*" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0", features = ["fmt"] }
zlambda-core = { path = "../zlambda-core" }
zlambda-dynamic = { path = "../zlambda-dynamic" }
zlambda-ebpf = { path = "../zlambda-ebpf" }
zlambda-process = { path = "../zlambda-process" }
zlambda-realtime-task = { path = "../zlambda-realtime-task" }
zlambda-router = { path = "../zlambda-router" }
