[package]
name = "zlambda-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
byteorder = { version = "*", features = [ "i128" ] }
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "*" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0", features = ["fmt"] }
zlambda-core = { path = "../zlambda-core" }
zlambda-dynamic = { path = "../zlambda-dynamic" }
zlambda-matrix = { path = "../zlambda-matrix" }
zlambda-matrix-ebpf-module = { path = "../zlambda-matrix-ebpf-module" }
zlambda-matrix-native = { path = "../zlambda-matrix-native" }
zlambda-matrix-wasm-module = { path = "../zlambda-matrix-wasm-module" }
zlambda-process = { path = "../zlambda-process" }
zlambda-realtime-task = { path = "../zlambda-realtime-task" }
zlambda-realtime-task2 = { path = "../zlambda-realtime-task2" }
zlambda-router = { path = "../zlambda-router" }
zlambda-sleep = { path = "../zlambda-sleep" }
