[package]
name = "zlambda-common"
version = "0.0.0"
edition = "2021"

[dependencies]
async-ffi = "*"
async-trait = "*"
bytes = { version = "1", features = ["serde"] }
libloading = "0.7"
futures = "0.3"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tempfile = { version = "3" }
tokio = { version = "1", features = ["full"] }
tokio-stream  = { version = "0", features = ["net"] }
tokio-util = { version = "0", features = ["full"] }
