[package]
name = "zlambda-core"
version = "0.0.0"
authors = [ "Justus Flerlage <justus@sutsuj.com>" ]
edition = "2021"

[dependencies]
#async-ffi = "*"
async-recursion = "*"
async-stream = "*"
async-trait = "*"
bytes = { version = "1", features = ["serde"] }
#either = "1"
futures = "0.3"
#libloading = "0.7"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
#tempfile = { version = "3" }
tokio = { version = "1", features = ["full"] }
tokio-stream  = { version = "0", features = ["net"] }
tokio-util = { version = "0", features = ["full"] }
tracing = { version = "0" }
