#cargo-features = ["per-package-target"]

[package]
name = "zlambda-ebpf-matrix"
version = "0.0.0"
edition = "2021"
#forced-target = "bpfel-unknown-none"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
zlambda-ebpf = { path = "../zlambda-ebpf" }

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
