[package]
name = "zlambda-process"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
zlambda-common = { path = "../zlambda-common" }
serde = { version = "1", features = ["derive"] }
clap = { version = "4" }
tokio = { version = "1", features = ["process"] }
tracing = { version = "0" }
