[package]
name = "zlambda-server"
version = "0.0.0"
edition = "2021"

[dependencies]
actix = { version = "0" }
bytes = { version = "1" }
tokio = { version = "1", features = ["full"] }
tokio-stream  = { version = "0" }
tokio-util = { version = "0", features = ["full"] }
zlambda-common = { path = "../zlambda-common" }
