[package]
name = "zlambda-server"
version = "0.0.0"
edition = "2021"

[dependencies]
actix = { version = "0" }
async-trait = { version = "0" }
bytes = { version = "1" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream  = { version = "0", features = ["net"] }
tokio-util = { version = "0", features = ["full"] }
zlambda-common = { path = "../zlambda-common" }
tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["fmt"] }
