[package]
name = "zlambda-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0" }
bytes = { version = "1" }
futures = { version = "0" }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream  = { version = "0", features = ["net"] }
tokio-util = { version = "0", features = ["full"] }
tracing = { version = "0" }
zlambda-common = { path = "../zlambda-common" }
