[package]
name = "zlambda-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { version = "4.0.0", features = [ "llvm" ], default-features = false }
zlambda-core = { path = "../zlambda-core" }
